# routine

./: README.md  pyproject.toml
routine/: routine.py
scripts/: manage_create_table_sqlite.py
sql/: activities_schema.sql  manage_create_table_sqlite.py
src/: routine.py  routine_calendar.py  routine_db.py
tests/: test_routine.py  tests.txt
